# GammaGear

./: .editorconfig  .gitignore  .gitmodules  GammaGear.sln  LICENSE.txt  README.md  work.patch
Docs/: wiz_dm_info.txt
GammaGear/: App.config  App.xaml  App.xaml.cs  GammaGear.csproj  MainWindow.xaml  MainWindow.xaml.cs
GammaGear/Assets/Data/: level_based_stats.csv
GammaGear/Assets/Styles/: Main.xaml
GammaGear/Assets/Themes/: Frappe.xaml  Mocha.xaml
GammaGear/Source/: CustomSorter.cs  Extensions.cs  Item.cs  LoadoutSelectionModal.xaml  LoadoutSelectionModal.xaml.cs  XMLToDB.cs
GammaGear/Source/Database/: IKiLocaleBank.cs  IKiWriter.cs  KiDatabaseTypes.cs  KiJsonParser.cs  KiLocaleBank.cs  KiParser.cs  KiSqliteReaderWriter.cs  KiSqliteWriter.cs  KiTextLocaleBank.cs  KiWriter.cs  (+2 more)
GammaTest/: GammaTest.csproj
GammaTest/DatabaseTests/: KiJsonParserTest.cs
Source/: GammaGear.sln
Source/GammaGear/: App.config  App.xaml  App.xaml.cs  AppSettings.json  ApplicationInfo.cs  GammaGear.csproj  MainWindow.xaml  MainWindow.xaml.cs  old--MainWindow.xaml.cs
Source/GammaGear/Python/ggutils/: pyproject.toml
Source/GammaGear/Python/ggutils/ggutils/: types.py
Source/GammaItems/: ArenaRank.cs  Extensions.cs  GammaItems.csproj  IllegalityReason.cs  IllegalitySet.cs  Item.cs  ItemBase.cs  ItemFlags.cs  ItemLoadout.cs  ItemSet.cs  ItemSetBonus.cs  ItemType.cs  School.cs
Source/GammaTest/: GammaTest.csproj  PatchMessages.xml  ProtocolTests.cs  TestUtils.cs
Source/KatsubaWrapper/: .gitignore  CMakeLists.txt  CMakeSettings.json  katsuba_wrapper.py  main.cpp  vcpkg.json
(+177 files in other folders)
