[tool.poetry]
name = "ggutils"
version = "0.1.0"
description = "A simple function library used in my Gamma Gear project"
authors = ["Yormi8 <126372786+Yormi8@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
wiztype = "^0.1.8"
regex = "2023.8.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
